# obelisk-tutorial

./: README.md  ROADMAP.md  obelisk-tutorial.cabal  obelisk.bib  shell.nix  tutorial1.hs  tutorial2.diff  tutorial2.hs  tutorial3.diff  tutorial4.diff  tutorial4.hs  tutorial5.diff  tutorial5.hs  tutorial6.diff  tutorial6.hs  tutorial_1.lhs
src/Obelisk/Diagrams/: DeltaFirst.hs
src/Obelisk/Math/: Homogenous.hs  Vector.hs
