cabal-version: 3.4

name:         obelisk-tutorial
version:      0.1.0.0
build-type:   Simple

executable DeltaFirst
  main-is: src/Obelisk/Diagrams/DeltaFirst.hs
  build-depends:
    base >= 4.7 && < 5
   ,diagrams
   ,diagrams-lib
   ,diagrams-svg


executable tutorial1
  main-is: tutorial1.hs
  hs-source-dirs:
    .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.7 && < 5
   ,sdl2
   ,sdl2-gfx
   ,linear
   ,mtl
   ,lens
   ,text
   ,array
   ,bifunctor
