cabal-version: 3.4

name:         obelisk-tutorial
version:      0.1.0.0
build-type:   Simple

library
  exposed-modules:
    Obelisk.Math.Vector
    Obelisk.Math.Homogenous
  hs-source-dirs:
    src
  build-depends:
    base >= 4.7 && < 5
   ,linear

common deps
  build-depends:
   sdl2
   ,sdl2-gfx
   ,linear
   ,mtl
   ,lens
   ,text
   ,array
   ,bifunctor
   ,obelisk-tutorial

executable DeltaFirst
  main-is: src/Obelisk/Diagrams/DeltaFirst.hs
  build-depends:
    base >= 4.7 && < 5
   ,diagrams
   ,diagrams-lib
   ,diagrams-svg

executable tutorial1
  import: deps
  main-is: tutorial1.hs
  hs-source-dirs:
    .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.7 && < 5

executable tutorial2
  import: deps
  main-is: tutorial2.hs
  hs-source-dirs:
    .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.7 && < 5

executable tutorial3
  import: deps
  main-is: tutorial3.hs
  hs-source-dirs:
    .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.7 && < 5

executable tutorial4
  import: deps
  main-is: tutorial4.hs
  hs-source-dirs:
    .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.7 && < 5

executable tutorial5
  import: deps
  main-is: tutorial5.hs
  hs-source-dirs:
    .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.7 && < 5

executable tutorial6
  import: deps
  main-is: tutorial6.hs
  hs-source-dirs:
    .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base >= 4.7 && < 5
